# the_stacks

./: .gitignore  Cargo.toml  Makefile.toml  readme.md
.cargo/: config.toml
assets/localization/: en-US.ftl  nl-NL.ftl
src/: camera.rs  card.rs  card_packs.rs  card_types.rs  lib.rs  localization.rs  main.rs  procedural.rs  recipe.rs  recipe_defines.rs  stack.rs  stack_utils.rs  ui.rs
src/recipe/: mod.rs  recipe_defines.rs
src/stack/: mod.rs  stack_utils.rs  tests.rs
